package v62;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62";
option java_outer_classname = "GetCaseProto";

//查询案件
message GetCaseRequest{
    extend sys.BaseRequest{
        optional GetCaseRequest cmd = 9005;
    }
    required string caseId = 1;
}

message GetCaseResponse{
    extend sys.BaseResponse{
        optional GetCaseResponse cmd = 9005;
    }
    optional Case case = 1;
}